--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,55 +5,89 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
-      - '.idea/**'
-      - '.gitattributes'
-      - '.github/**.json'
-      - '.gitignore'
-      - '.gitmodules'
-      - '**.md'
-      - '**/*.txt'
-      - '**/*.png'
-      - '**/*.jpg'
-      - 'LICENSE'
-      - 'NOTICE'
+    tags:
+      - '*'
   pull_request:
     paths-ignore:
-      - '.idea/**'
-      - '.gitattributes'
-      - '.github/**.json'
-      - '.gitignore'
-      - '.gitmodules'
-      - '**.md'
+      - '**/*.md'
       - '**/*.txt'
       - '**/*.png'
       - '**/*.jpg'
-      - 'LICENSE'
-      - 'NOTICE'
 
 jobs:
-  publish:
-    name: Publish to MavenLocal
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: 17
-      - uses: gradle/gradle-build-action@v2
-        with:
-          arguments: publishToMavenLocal
-
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
-          java-version: 17
-      - uses: gradle/gradle-build-action@v2
+          java-version: 11
+      - uses: subosito/flutter-action@v1
         with:
-          arguments: app:assembleDebug
+          flutter-version: '2.8.1'
+      - uses: finnp/create-file-action@master
+        env:
+          FILE_NAME: lib/common/config/ignoreConfig.dart
+          FILE_DATA: class NetConfig { static const CLIENT_ID = "${{ secrets.CLIENT_ID }}"; static const CLIENT_SECRET = "${{ secrets.CLIENT_SECRET }}";}
+      - run: flutter pub get
+      - run: flutter build apk --release --target-platform=android-arm64 --no-shrink
+
+  apk:
+    name: Generate APK
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: 8
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.5.3'
+      - uses: finnp/create-file-action@master
+        env:
+          FILE_NAME: lib/common/config/ignoreConfig.dart
+          FILE_DATA: class NetConfig { static const CLIENT_ID = "${{ secrets.CLIENT_ID }}"; static const CLIENT_SECRET = "${{ secrets.CLIENT_SECRET }}";}
+      - run: flutter pub get
+      - run: flutter build apk --release --target-platform=android-arm64 --no-shrink
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: apk
+          path: build/app/outputs/apk/release/app-release.apk
+  release:
+    name: Release APK
+    needs: apk
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download APK from build
+        uses: actions/download-artifact@v2
+        with:
+          name: apk
+      - name: Display structure of downloaded files
+        run: ls -R
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1.1.4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+      - name: Upload Release APK
+        id: upload_release_asset
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./app-release.apk
+          asset_name: app-release.apk
+          asset_content_type: application/zip
